endpoints refactoring
