# cs3api_test_ext/swagger/share-api.yaml
@@ -99,11 +99,7 @@ paths:
       - "application/json"
       parameters:
       - in: "query"
-        name: "userid"
-        description: "Username"
-        required: true
-      - in: "query"
-        name: "shareid"
+        name: "share_id"
         description: "ID of a share"
         required: true
 
